error prevented 2.4pre2 from being installed properly.

+ Enhancements

- Ruby mode updates (Mike Dillon)
- Syntax highlighting streamlined

+ Bug Fixes

- jEdit didn't install due to an installer error (since 2.4pre2)
- jEdit didn't check if the buffer changed on disk when switching buffesr
  (since 2.4pre1)
- The read only flag wasn't set on files (since 2.2 !!!)

+ API Changes

- The ASPMode plugin will no longer work, because hard-coded token markers
  are no longer supported. ASPMode should be rewritten in the XMode XML
  syntax.

* Version 2.4pre2

+ New Features

- The XMode plugin by Mike Dillon has been integrated into the core. This means
  that:
  - you can now define edit modes using an XML syntax
  - there are more modes available -- COBOL, ColdFusion, Ruby, Scheme, AWK, etc
  - many existing modes now work better; operators are highlighted, etc
  - jEdit starts up a little slower now, because it has to parse all XML mode
    files. In a future release, we will implement a cache mechanism that will
    speed up startup
  - the Perl mode is still implemented using the old syntax system, because the
    XMode parser doesn't yet have the necessary features to highlight Perl mode
- The current line is highlighted in the gutter now

+ Enhancements

- Closing a buffer will now go to the most recently edited buffer, rather
  than the previous one

+ Bug Fixes

- 'Complete Word' didn't find all completions (since 2.4pre1)
- Inserting lines at the end of non-text files didn't work properly (since
  2.4pre1)
- File modification check on focus didn't work very well (since 2.4pre1)
- Fixed possible ClassCastException with plugin manager (since 2.3pre5)

* Version 2.4pre1

+ New Features

- The syntax highlighting system no longer reparses lines every time
  they are drawn; instead, tokens are cached and lines are only parsed
  when the document changes. This should result in smoother scrolling
  and improved performance in general